--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.3.0",
     "@ngrx/effects": "^14.3.3",
+    "@ngrx/router-store": "^14.3.3",
     "@ngrx/store": "^14.3.3",
     "@ngrx/store-devtools": "^14.3.3",
     "angular-in-memory-web-api": "^0.13.0",
-    "ng-mocks": "^14.11.0",
+    "ng-mocks": "^14.12.1",
     "rxjs": "~7.5.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
